<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.homeUI.teacher.filter.FilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_filter_save"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_time"
            style="@style/BoldLargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/text_medium"
            android:text="@string/time"
            app:layout_constraintBottom_toTopOf="@id/btn_start_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btn_start_time"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/init_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/tv_from_time"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time"
            tools:layout_editor_absoluteY="85dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <TextView
            android:id="@+id/tv_from_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_medium"
            android:text="@string/from"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_start_time"
            app:layout_constraintEnd_toStartOf="@+id/btn_end_time"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_start_time"
            app:layout_constraintTop_toTopOf="@id/btn_start_time" />

        <Button
            android:id="@+id/btn_end_time"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/init_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_start_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_from_time"
            app:layout_constraintTop_toTopOf="@id/btn_start_time" />

        <CheckBox
            android:id="@+id/ibtn_thu"
            style="@style/WeeklyButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/toggle_button_background"
            android:text="@string/thursday"
            app:layout_constraintBottom_toBottomOf="@+id/ibtn_mon"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_fri"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ibtn_wed"
            app:layout_constraintTop_toTopOf="@+id/ibtn_mon" />

        <TextView
            android:id="@+id/tv_select_day"
            style="@style/BoldLargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/text_medium"
            android:text="요일 선택"
            app:layout_constraintBottom_toTopOf="@+id/ibtn_mon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline3"
            app:layout_constraintVertical_chainStyle="packed" />

        <CheckBox
            android:id="@+id/ibtn_mon"
            style="@style/WeeklyButton"
            android:layout_width="50dp"
            android:background="@drawable/toggle_button_background"
            android:text="@string/monday"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_tue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_day" />

        <CheckBox
            android:id="@+id/ibtn_tue"
            style="@style/WeeklyButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/toggle_button_background"
            android:text="@string/tuesday"
            app:layout_constraintBottom_toBottomOf="@+id/ibtn_mon"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_wed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ibtn_mon"
            app:layout_constraintTop_toTopOf="@+id/ibtn_mon" />

        <CheckBox
            android:id="@+id/ibtn_wed"
            style="@style/WeeklyButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/toggle_button_background"
            android:text="@string/wednesday"
            app:layout_constraintBottom_toBottomOf="@+id/ibtn_mon"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_thu"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ibtn_tue"
            app:layout_constraintTop_toTopOf="@+id/ibtn_mon" />

        <CheckBox
            android:id="@+id/ibtn_sat"
            style="@style/WeeklyButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/toggle_button_background"
            android:text="@string/saturday"
            app:layout_constraintBottom_toBottomOf="@+id/ibtn_mon"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_sun"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ibtn_fri"
            app:layout_constraintTop_toTopOf="@+id/ibtn_mon" />

        <CheckBox
            android:id="@+id/ibtn_sun"
            style="@style/WeeklyButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/toggle_button_background"
            android:text="@string/sunday"
            app:layout_constraintBottom_toBottomOf="@+id/ibtn_mon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ibtn_sat"
            app:layout_constraintTop_toTopOf="@+id/ibtn_mon" />

        <CheckBox
            android:id="@+id/ibtn_fri"
            style="@style/WeeklyButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/toggle_button_background"
            android:text="@string/friday"
            app:layout_constraintBottom_toBottomOf="@+id/ibtn_mon"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_sat"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ibtn_thu"
            app:layout_constraintTop_toTopOf="@+id/ibtn_mon" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.66" />

        <RadioGroup
            android:id="@+id/rg_term"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_term">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rb_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/selector_radio_button"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/week"
                android:textSize="@dimen/text_medium_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rb_month"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/rb_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/selector_radio_button"
                android:button="@null"
                android:gravity="center"
                android:text="@string/month"
                android:textSize="@dimen/text_medium_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rb_three_month"
                app:layout_constraintStart_toEndOf="@id/rb_week"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/rb_three_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/selector_radio_button"
                android:button="@null"
                android:gravity="center"
                android:text="@string/three_months"
                android:textSize="@dimen/text_medium_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rb_total"
                app:layout_constraintStart_toEndOf="@id/rb_month"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/rb_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/selector_radio_button"
                android:button="@null"
                android:gravity="center"
                android:text="@string/total"
                android:textSize="@dimen/text_medium_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rb_three_month"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_select_term"
            style="@style/BoldLargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/text_medium"
            android:text="@string/select_term"
            app:layout_constraintBottom_toTopOf="@+id/rg_term"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline6"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btn_filter_save"
        style="@style/RegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>